# Light_Saber

./: .gitignore  CMakeLists.txt  sdkconfig  sdkconfig.defaults  sdkconfig.old
.qoder/repowiki/knowledge/zh/: _index.yaml
.qoder/repowiki/knowledge/zh/ESP32 语音识别与合成组件/: _module.yaml  技术栈.md  架构设计.md  概述.md  编码规范.md
.qoder/repowiki/knowledge/zh/ESP32 语音识别与合成组件/中文语音合成 (TTS) 模块/: _module.yaml  技术栈.md  架构设计.md  概述.md  编码规范.md
.qoder/repowiki/knowledge/zh/ESP32 语音识别与合成组件/语音识别核心基础服务/: _module.yaml  架构设计.md  概述.md  编码规范.md
.qoder/repowiki/knowledge/zh/ESP32 语音识别与合成组件/语音识别模型资源管理/: _module.yaml  技术栈.md  架构设计.md  概述.md  特殊配置与命令.md  编码规范.md
.qoder/repowiki/knowledge/zh/ESP32-S3 智能光剑固件工程/: _module.yaml  技术栈.md  架构设计.md  概述.md  编码规范.md
.qoder/repowiki/knowledge/zh/智能光剑固件主控模块/: _module.yaml  技术栈.md  架构设计.md  概述.md  特殊配置与命令.md
.qoder/repowiki/knowledge/zh/智能光剑固件主控模块/LED特效与按键输入模块/: _module.yaml  技术栈.md  架构设计.md  概述.md  编码规范.md
.qoder/repowiki/knowledge/zh/智能光剑固件主控模块/传感器姿态感知与角度配置管理/: _module.yaml  技术栈.md  架构设计.md  概述.md  编码规范.md
.qoder/repowiki/knowledge/zh/智能光剑固件主控模块/多协议网络通信与配网模块/: _module.yaml  技术栈.md  架构设计.md  概述.md  编码规范.md
.qoder/repowiki/knowledge/zh/智能光剑固件主控模块/录音控制状态机/: _module.yaml  架构设计.md  概述.md  编码规范.md
.qoder/repowiki/knowledge/zh/智能光剑固件主控模块/音频编解码与语音识别模块/: _module.yaml  技术栈.md  架构设计.md  概述.md  编码规范.md
.qoder/repowiki/knowledge/zh/硬件抽象与多媒体协议栈/: _module.yaml  技术栈.md  架构设计.md  概述.md  编码规范.md
.qoder/repowiki/zh/content/: 快速开始.md  状态管理系统.md  项目概述.md
.qoder/repowiki/zh/content/API 参考手册/: API 参考手册.md  传感器 API.md  状态管理 API.md
.qoder/repowiki/zh/content/API 参考手册/硬件控制 API/: GPIO 控制 API.md  LED 控制 API.md  按键事件 API.md  硬件初始化 API.md  硬件控制 API.md
.qoder/repowiki/zh/content/API 参考手册/网络通信 API/: MQTT 通信 API.md  TCP 通信 API.md  WebSocket 通信 API.md  WiFi 连接 API.md  网络通信 API.md
.qoder/repowiki/zh/content/API 参考手册/音频处理 API/: 语音识别 API.md  音频初始化 API.md  音频处理 API.md  音频控制 API.md  音频播放 API.md
.qoder/repowiki/zh/content/API 参考手册/音频处理 API/编解码器 API/: MP3 解码器 API.md  Opus 编解码器 API.md  编解码器 API.md
.qoder/repowiki/zh/content/传感器系统/: IMU 传感器集成.md  传感器系统.md  姿态估计算法.md
.qoder/repowiki/zh/content/实时系统设计/: FreeRTOS 任务管理.md  内存管理策略.md  实时性能优化.md  实时系统设计.md
.qoder/repowiki/zh/content/开发工具与调试/: 开发工具与调试.md  开发环境配置.md  性能分析与优化.md  故障排除指南.md  调试工具使用.md
.qoder/repowiki/zh/content/用户交互系统/: LED 控制系统.md  按键事件处理.md  用户交互系统.md  角度配置管理.md
.qoder/repowiki/zh/content/硬件架构设计/: 引脚分配与连接.md  电源管理与功耗控制.md  硬件抽象层设计.md  硬件架构设计.md  硬件组件清单.md
.qoder/repowiki/zh/content/组件架构设计/: 依赖管理策略.md  模块化设计原则.md  硬件抽象层设计.md  组件接口规范.md  组件架构设计.md  组件生命周期管理.md
.qoder/repowiki/zh/content/网络通信系统/: MQTT 云端通信.md  TCP 本地服务.md  WebSocket 实时通信.md  WiFi 自动配网.md  网络通信系统.md
.qoder/repowiki/zh/content/部署与维护/: OTA 升级机制.md  固件部署.md  构建系统配置.md  生产环境部署.md  运维监控.md  部署与维护.md
.qoder/repowiki/zh/content/配置管理系统/: JSON 配置系统.md  SPIFFS 文件系统.md  配置管理系统.md
.qoder/repowiki/zh/content/音频处理系统/: MP3 音频解码.md  Opus 音频编解码.md  语音识别系统.md  音频处理架构.md  音频处理系统.md  音频路由控制.md
.qoder/repowiki/zh/meta/: repowiki-metadata.json
components/IMU/: CMakeLists.txt  Kconfig  imu_selector.h
components/IMU/core/: imu_port.h  madgwick_ahrs.c  madgwick_ahrs.h
components/IMU/drivers/mpu6050/: driver_mpu6050.c  mpu6050.c  mpu6050.h
components/esp_websocket_client/: CMakeLists.txt
components/hardware_driver/: esp_board_init.c
components/hardware_driver/boards/esp32-s3/: bsp_board.c
components/hardware_driver/boards/include/: bsp_board.h
components/hardware_driver/include/: esp_board_init.h
components/helix-mp3/: CMakeLists.txt  Kconfig  home.lnk
components/helix-mp3/fixpnt/pub/: mp3common.h  mp3dec.h
components/helix-mp3/fixpnt/real/: assembly.h  math_utils.c
components/libogg-1.3.6/: CMakeLists.txt  bitwise.c  config_types.h  framing.c  os_types.h
components/opus-1.5.2/: CMakeLists.txt  Kconfig
main/: CMakeLists.txt  main.c
main/app/aliyun/: app_aliyun_mqtt.c  app_aliyun_mqtt.h
main/app/angle/: angle_config_manager.c  angle_config_manager.h
main/app/audio/: app_sr.c  app_sr.h  audio.c  audio.h  audio_private.h  mp3_decoder_port.c  opus_codec_port.c
main/app/imu/: imu.c  imu.h
main/app/key/: app_key.c  app_key.h
main/app/led_strip/: led_effect.c  led_effect.h  led_spi.c  led_spi.h
main/app/state_machine/: state_machine.c  state_machine.h
main/app/tcp/: app_tcp.c  app_tcp.h
main/app/websocket/: websocket.c  websocket.h
main/app/wifi/: app_wifi_config.h
spiffs/: dc.opus  turn_off.opus  turn_on.opus
